21-networkPolicy/netpol/allow-fronted-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fronted-namespace
  namespace: backend
spec:
  podSelector: 
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
    - from:
      # - namespaceSelector: {} # Allows communication start from all namespaces.
      - namespaceSelector:
          matchLabels:
            type: frontend
      ports:
        - protocol: TCP
          port: 80 # Port used to receive traffic inside nginx pod.
            
# Explanation: This netpol will allow pods within namespaces which have `type: frontend` label.

# kubectl apply -f allow-fronted-namespace.yaml
# kubectl delete netpol -n backend allow-fronted-namespace

# kubectl get netpol -n backend
# kubectl describe netpol -n backend allow-fronted-namespace
