21-networkPolicy/netpol/deny-other-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress

# Explanation: This netpol will prevent nginx pod from receiving traffic from pods inside other namespaces

# kubectl apply -f deny-other-namespaces.yaml
# kubectl delete netpol -n backend deny-other-namespaces

# kubectl get netpol -n backend
# kubectl describe netpol -n backend deny-other-namespaces
